Make all modal keybindings off by default, fix contrast issues with inputs in light mode (#516)
* Make all modal keybindings opt in

* Fix some contrast issues with inputs in light Mode

--- a/src/app/common/elements/button.less
+++ b/src/app/common/elements/button.less
@@ -20,7 +20,7 @@
     }
 
     &.primary {
-        color: var(--form-element-text-color);
+        color: var(--form-element-primary-text-color);
         background: var(--form-element-primary-color);
         i {
             fill: var(--form-element-text-color);
